# python-webpage-content-scraper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_webpage_content_scraper.py
webpage_content_scraper/: __init__.py
